alignment fix desc

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
     font-weight: 498;
     line-height: normal;
     font-size: 1em;
-    text-align: left;
+    text-align: start;
   }
 
   p.copyright {
